objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>Staff applicant&apos;s ethnicity</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Black African</fullName>
                </value>
                <value>
                    <fullName>Black Caribbean</fullName>
                </value>
                <value>
                    <fullName>Black other</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Pakistani</fullName>
                </value>
                <value>
                    <fullName>Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Other Asian</fullName>
                </value>
                <value>
                    <fullName>Other ethnic group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity_other__c</fullName>
        <label>Ethnicity other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_CRB_clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if has existing CRB clearance, leave unchecked if not</inlineHelpText>
        <label>Existing CRB clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_CRB_clearance_number__c</fullName>
        <description>Existing Criminal Records Bureau clearance number for Staff Applicants</description>
        <label>Existing CRB number (if you have one)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_managing_difficult_behaviour__c</fullName>
        <description>(Only for senior mentors) Description of managing difficult behaviour</description>
        <label>Experience managing difficult behaviour</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Explain_why_why_not_offer_next_year__c</fullName>
        <description>Explains why we think the person should or should not be offered a role next year</description>
        <label>Explain why/why not offer next year</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facebook_Name__c</fullName>
        <label>Facebook Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_name_AM_SAM_application__c</fullName>
        <label>First name, AM/SAM application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <label>First name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_time_summer_time_commitment__c</fullName>
        <description>Staff applicant&apos;s full-time summer time commitment</description>
        <label>Full time summer time commitment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3 weeks</fullName>
                </value>
                <value>
                    <fullName>2 weeks</fullName>
                </value>
                <value>
                    <fullName>1 week</fullName>
                </value>
                <value>
                    <fullName>I cannot commit full time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Address__c</fullName>
        <label>GP Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GP_Contact_Number__c</fullName>
        <label>GP Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Name__c</fullName>
        <label>GP Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Staff applicant&apos;s gender</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>H1_Project_coach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>H1 Project coach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H1_Team_leader_Senior_mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>H1 Team leader Senior mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H1_Team_mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>H1 Team mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box checked if YP has selected this wave</inlineHelpText>
        <label>H1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H2_Project_coach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>H2 Project coach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H2_Team_leader_Senior_mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>H2 Team leader Senior mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H2_Team_mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>H2 Team mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box checked if YP has selected this wave</inlineHelpText>
        <label>H2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HOLD_COMMS__c</fullName>
        <label>HOLD COMMS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Have_a_criminal_record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have a criminal record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heart_trouble_blood_pressure_angina__c</fullName>
        <label>Heart trouble, blood pressure, angina?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes - heart trouble</fullName>
                </value>
                <value>
                    <fullName>Yes - angina</fullName>
                </value>
                <value>
                    <fullName>Yes - raised blood pressure</fullName>
                </value>
                <value>
                    <fullName>Yes, details unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_telephone_number__c</fullName>
        <label>Home telephone number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hoodie_SIZE__c</fullName>
        <label>Hoodie - SIZE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
                <value>
                    <fullName>XXL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hoodie_date_given__c</fullName>
        <label>Hoodie - date given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_deadline__c</fullName>
        <description>Deadline for making up outstanding hours</description>
        <inlineHelpText>Deadline for making up outstanding hours (one week before graduation)</inlineHelpText>
        <label>Hours deadline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_outstanding_current__c</fullName>
        <label>Hours outstanding current</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_outstanding_original__c</fullName>
        <description>ORC hours outstanding</description>
        <inlineHelpText>ORC hours outstanding</inlineHelpText>
        <label>Hours outstanding original</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_summary_Sept_2011__c</fullName>
        <label>Hours summary Sept 2011</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hyperactivity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hyperactivity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_female_know_suspect_pregnancy__c</fullName>
        <label>If female, know/suspect pregnancy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ineligible_application__c</fullName>
        <inlineHelpText>Select reason/s application is ineligible</inlineHelpText>
        <label>Ineligible application</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Infectious_diseases__c</fullName>
        <label>Infectious diseases?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insufficient_P2_non_medical_info__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if there are issues with any P2 info e.g. lack of consent. This excludes medical info.</inlineHelpText>
        <label>Insufficient P2 non-medical info?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insufficient_Pt1_info_details__c</fullName>
        <inlineHelpText>Provide details of the missing info</inlineHelpText>
        <label>Insufficient Pt1 info details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insufficient_Pt1_information__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if YP name is unclear or PG contact details are missing</inlineHelpText>
        <label>Insufficient Pt1 information?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ipsis_Mori_survey_ID__c</fullName>
        <label>Ipsis Mori survey ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KO_waiting_list__c</fullName>
        <label>KO waiting list</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>H1</fullName>
                </value>
                <value>
                    <fullName>H2</fullName>
                </value>
                <value>
                    <fullName>S1</fullName>
                </value>
                <value>
                    <fullName>S2</fullName>
                </value>
                <value>
                    <fullName>S3</fullName>
                </value>
                <value>
                    <fullName>S4</fullName>
                </value>
                <value>
                    <fullName>S5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L1_Community_Mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L1 Community Mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L1_Residential_Mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L1 Residential Mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2_Community_Mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L2 Community Mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2_Residential_Mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L2 Residential Mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_ProjectVol_Sat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L ProjectVol Sat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_ProjectVol_Sun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L ProjectVol Sun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_name_AM_SAM_application__c</fullName>
        <label>Last name, AM/SAM application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Hammersmith, West London</fullName>
                </value>
                <value>
                    <fullName>Southwark, South London</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locations_you_are_interested_in__c</fullName>
        <label>Locations you are interested in</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Southwark</fullName>
                </value>
                <value>
                    <fullName>Hammersmith</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Looked_after_child_in_care__c</fullName>
        <label>Looked after child in care?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_details_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical details received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_notes__c</fullName>
        <label>Medical notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_status__c</fullName>
        <label>Medical status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need info from PG</fullName>
                </value>
                <value>
                    <fullName>Need info from school</fullName>
                </value>
                <value>
                    <fullName>Awaiting school info</fullName>
                </value>
                <value>
                    <fullName>Need info from doctor</fullName>
                </value>
                <value>
                    <fullName>Awaiting info from doctor</fullName>
                </value>
                <value>
                    <fullName>Need info from social worker/other</fullName>
                </value>
                <value>
                    <fullName>Awaiting info from social worker/other</fullName>
                </value>
                <value>
                    <fullName>Awaiting response info from Programmes</fullName>
                </value>
                <value>
                    <fullName>Medically OK to accept</fullName>
                </value>
                <value>
                    <fullName>Cannot be accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migraines_severe_head_injury__c</fullName>
        <label>Migraines/severe head injury?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes - migraines</fullName>
                </value>
                <value>
                    <fullName>Yes - severe head injury</fullName>
                </value>
                <value>
                    <fullName>Yes, details unknown</fullName>
                </value>
                <value>
                    <fullName>Yes, other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milkround_rotation__c</fullName>
        <label>Milkround rotation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_custom__c</fullName>
        <label>Mobile custom</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_waves__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if they are interested in doing multiple waves; leave unchecked if not</inlineHelpText>
        <label>Multiple_waves</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_bank_account_holder__c</fullName>
        <label>Name of bank account holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_P2_form__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if P2 form is of the new design</inlineHelpText>
        <label>New P2 form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_wave_assigned_date__c</fullName>
        <label>New wave assigned date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Not_resident_nor_at_school_in_location__c</fullName>
        <inlineHelpText>Provide details of residential and school locations, that are not Challenge locations</inlineHelpText>
        <label>Not resident nor at school in location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ORC_1_time__c</fullName>
        <description>Start time of ORC 1</description>
        <label>ORC 1 time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORC_2_3_and_4_time__c</fullName>
        <description>Start time of ORC 2, 3 and 4</description>
        <label>ORC 2, 3 and 4 time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORC_Saturdays_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORC Saturdays only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORC_Saturdays_or_Sundays__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORC Saturdays or Sundays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORC_Sundays_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORC Sundays only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORC_availability_notes__c</fullName>
        <inlineHelpText>Details of ORC availability</inlineHelpText>
        <label>ORC availability notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ORC_discount_extension__c</fullName>
        <formula>School__r.ORC_discount_extension__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORC discount extension</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ORC_neither_day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORC neither day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORC_team_day__c</fullName>
        <label>ORC team day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Saturdays and Sundays</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ORC_venue__c</fullName>
        <label>ORC venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORC_venue_address__c</fullName>
        <label>ORC venue address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_next_year_2__c</fullName>
        <label>Offer next year?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_comments__c</fullName>
        <inlineHelpText>Other comments from application form</inlineHelpText>
        <label>Other comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_diagnosed_condition__c</fullName>
        <label>Other diagnosed condition?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_position__c</fullName>
        <label>Other position?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATL</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
                <value>
                    <fullName>TL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_school__c</fullName>
        <label>Other school</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue_for_a_tetanus_injection__c</fullName>
        <label>Overdue for a tetanus injection?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P1_CRM_data_entry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if P1 data was entered by central CRM team</inlineHelpText>
        <label>P1 CRM data entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P1_key_entries_checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P1 key entries checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P1_status__c</fullName>
        <label>P1 status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name, no form</fullName>
                </value>
                <value>
                    <fullName>Old P1 received</fullName>
                </value>
                <value>
                    <fullName>New P1 received</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P2_data_checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P2 data checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P45_P46_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P45/P46 received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PG2_work_tel__c</fullName>
        <label>PG 2 work tel</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_2_Title__c</fullName>
        <label>PG 2 Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Miss</fullName>
                </value>
                <value>
                    <fullName>Dr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_2_address_if_different__c</fullName>
        <label>PG 2 address, if different</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PG_2_email_address__c</fullName>
        <label>PG 2 email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PG_2_first_name__c</fullName>
        <label>PG 2 first name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_2_last_name__c</fullName>
        <label>PG 2 last name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_2_mobile_number__c</fullName>
        <label>PG 2 mobile number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_2_relationship_to_YP__c</fullName>
        <label>PG 2 relationship to YP</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Eve_Attended_by_PG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG Eve Attended by PG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PG_Eve_Attended_by_YP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG Eve Attended by YP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PG_Eve_invite_sent__c</fullName>
        <label>PG Eve invite sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PG_address_if_different__c</fullName>
        <inlineHelpText>PG address, if different to YP address</inlineHelpText>
        <label>PG address, if different</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PG_email_address_alternate__c</fullName>
        <label>PG email address alternate</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PG_eve_invite_infocheck_sent__c</fullName>
        <inlineHelpText>Date PG eve invitation and information check sent</inlineHelpText>
        <label>PG eve invite &amp; infocheck sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PG_eve_location__c</fullName>
        <formula>School__r.TCN_specific_PG_eve_location2012__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG eve location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_eve_time__c</fullName>
        <formula>School__r.TCN_specific_PG_eve_time_2012__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG eve time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_evening_TCN_pres__c</fullName>
        <formula>School__r.TCN_specific_PG_eve_date2012__c</formula>
        <label>PG evening TCN pres</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PG_home_tel_if_different__c</fullName>
        <inlineHelpText>PG home tel, where different to YP</inlineHelpText>
        <label>PG home tel, if different</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_info_eve_PGsaywillcome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG info eve PG say will come</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PG_info_eve_attended_by_PG__c</fullName>
        <label>PG info eve attended by PG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PG_info_eve_attended_by_YP__c</fullName>
        <label>PG info eve attended by YP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PG_ok_to_promote__c</fullName>
        <description>PG has said they&apos;re happy to help us promote in some way</description>
        <label>PG ok to promote</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PG_relationship_to_YP__c</fullName>
        <inlineHelpText>The PG&apos;s relationship to the YP</inlineHelpText>
        <label>PG relationship to YP</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_work_tel__c</fullName>
        <label>PG work tel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Subcluster_choice_Bham__c</fullName>
        <label>PV Subcluster choice Midlands</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Birmingham (BIv1, BIv2, BIv3, BIv4)</fullName>
                </value>
                <value>
                    <fullName>Solihull (WAv3)</fullName>
                </value>
                <value>
                    <fullName>Coventry (WAv1, WAv2)</fullName>
                </value>
                <value>
                    <fullName>Leamington Spa (WAv4)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>